[+] implement globals, add db tests

--- a/requirements/.env.example
+++ b/requirements/.env.example
@@ -4,9 +4,6 @@ MYSQL_PASSWORD=
 MYSQL_DATABASE=kisumi
 MYSQL_PORT=3306
 
-DATA_DIR=.data
+REDIS_DSN=redis://localhost
 
-REDIS_DB_NUMBER=0
-REDIS_HOST=localhost
-# password is optional.
-REDIS_PASSWORD=
+DATA_DIR=.data
