--- a/requirements/.env.example
+++ b/requirements/.env.example
@@ -1,8 +1,5 @@
-MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PASSWORD=
-MYSQL_DATABASE=kisumi
-MYSQL_PORT=3306
+MONGO_HOST=localhost
+MONGO_PORT=27017
 
 REDIS_DSN=redis://localhost
 
